Added a form to the page

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,18 @@
     <title>Form</title>
 </head>
 <body>
+    <form action="">
+    <label for="Name"></label>
     <input type="text" placeholder="Name">
+
+    <label for="Email"></label>
     <input type="email"placeholder="Email">
+
+    <label for="Message"></label>
     <input type="text" placeholder="Message">
+
+    <label for="Submit"></label>
     <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
