--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,16 @@
 </head>
 <body>
     <form action="">
-    <label for="Name"></label>
+    <label for="Name">Name</label>
     <input type="text" placeholder="Name">
 
-    <label for="Email"></label>
+    <label for="Email"Email></label>
     <input type="email"placeholder="Email">
 
-    <label for="Message"></label>
+    <label for="Message">Message</label>
     <input type="text" placeholder="Message">
 
-    <label for="Submit"></label>
-    <button type="submit">Submit</button>
+    <button>Submit</button>
     </form>
 </body>
 </html>
