--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>Contact - Netflix</title>
 </head>
 <body>
     <form action="">
     <label for="Name">Name</label>
     <input type="text" placeholder="Name">
 
-    <label for="Email"Email></label>
+    <label for="Email">Email</label>
     <input type="email"placeholder="Email">
 
     <label for="Message">Message</label>
